@@ -13,6 +13,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Added a traceback to the log message produced when processing the
+      digest.mbox throws an exception.
+
     - Added a urlhost argument to the MailList.MailList.Create() method to
       allow bin/newlist and the the create CGI to pass urlhost so the host
       will be correct in the listinfo link on the emptyarchive page.
